Add docs to auto-redirect function

--- a/etc/auto-redirect/template.yml
+++ b/etc/auto-redirect/template.yml
@@ -73,3 +73,8 @@ Resources:
       Role: !GetAtt IamRole.Arn
       Runtime: nodejs12.x
       Timeout: 4
+  FunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${Function}
+      RetentionInDays: 14
