--- a/dns/prxu.org-hosted_zone.yml
+++ b/dns/prxu.org-hosted_zone.yml
@@ -185,6 +185,16 @@ Resources:
           AliasTarget:
             DNSName: d32fszakr14ebp.cloudfront.net
             HostedZoneId: Z2FDTNDATAQYW2
+        - Type: A
+          Name: !Sub a.${Domain}
+          AliasTarget:
+            DNSName: dqos2vqrtnmab.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub a.${Domain}
+          AliasTarget:
+            DNSName: dqos2vqrtnmab.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
   Highwinds:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
@@ -257,3 +267,8 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub _ac77f64307346fc4ab79289150f00aba.userupload.${Domain}
+        - ResourceRecords:
+            - _9d5735ed912db035b64fcd06ee2cc188.tfmgdnztqk.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _b8dd66197d6cc156051d931a5f7ecdd9.a.${Domain}
