Add Snap Judgment feed CDN DNS records

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -104,3 +104,7 @@ Resources:
         # Criminal
         - { Type: A,    Name: !Sub "pf3qsqna8v.${Domain}", AliasTarget: { DNSName: "d9wzf7o52lh8l.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf3qsqna8v.${Domain}", AliasTarget: { DNSName: "d9wzf7o52lh8l.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # Snap Judgment
+        - { Type: A,    Name: !Sub "pf5449snpj.${Domain}", AliasTarget: { DNSName: "d3j244ouutc6g5.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf5449snpj.${Domain}", AliasTarget: { DNSName: "d3j244ouutc6g5.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
