Add UpdateReplace policies for subnets

--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -226,6 +226,7 @@ Resources:
   Subnet1:
     Type: "AWS::EC2::Subnet"
     DependsOn: IPv6VCPCidrBlock
+    UpdateReplacePolicy: Retain
     Properties:
       VpcId: !Ref VPC
       AvailabilityZone: !Join ["", [!Ref "AWS::Region", a]]
@@ -245,6 +246,7 @@ Resources:
   Subnet2:
     Type: "AWS::EC2::Subnet"
     DependsOn: IPv6VCPCidrBlock
+    UpdateReplacePolicy: Retain
     Properties:
       VpcId: !Ref VPC
       AvailabilityZone: !If [IsUsEast1, us-east-1c, !Join ["", [!Ref "AWS::Region", b]]]
@@ -264,6 +266,7 @@ Resources:
   Subnet3:
     Type: "AWS::EC2::Subnet"
     DependsOn: IPv6VCPCidrBlock
+    UpdateReplacePolicy: Retain
     Properties:
       VpcId: !Ref VPC
       AvailabilityZone: !If [IsUsEast1, us-east-1d, !Join ["", [!Ref "AWS::Region", c]]]
