--- a/stacks/container-apps/sphinx-nlb.yml
+++ b/stacks/container-apps/sphinx-nlb.yml
@@ -82,42 +82,42 @@ Resources:
           IpProtocol: tcp
           FromPort: 443
           ToPort: 443
-        - CidrIpv6: ::/0
-          IpProtocol: tcp
-          FromPort: 443
-          ToPort: 443
+        # - CidrIpv6: ::/0
+        #   IpProtocol: tcp
+        #   FromPort: 443
+        #   ToPort: 443
         - CidrIp: 0.0.0.0/0
           IpProtocol: tcp
           FromPort: 80
           ToPort: 80
-        - CidrIpv6: ::/0
-          IpProtocol: tcp
-          FromPort: 80
-          ToPort: 80
+        # - CidrIpv6: ::/0
+        #   IpProtocol: tcp
+        #   FromPort: 80
+        #   ToPort: 80
         - CidrIp: 0.0.0.0/0
           IpProtocol: tcp
           FromPort: 3000
           ToPort: 3000
-        - CidrIpv6: ::/0
-          IpProtocol: tcp
-          FromPort: 3000
-          ToPort: 3000
+        # - CidrIpv6: ::/0
+        #   IpProtocol: tcp
+        #   FromPort: 3000
+        #   ToPort: 3000
         - CidrIp: 0.0.0.0/0
           IpProtocol: tcp
           FromPort: 22
           ToPort: 22
-        - CidrIpv6: ::/0
-          IpProtocol: tcp
-          FromPort: 22
-          ToPort: 22
+        # - CidrIpv6: ::/0
+        #   IpProtocol: tcp
+        #   FromPort: 22
+        #   ToPort: 22
         - CidrIp: 0.0.0.0/0
           IpProtocol: tcp
           FromPort: 9312
           ToPort: 9312
-        - CidrIpv6: ::/0
-          IpProtocol: tcp
-          FromPort: 9312
-          ToPort: 9312
+        # - CidrIpv6: ::/0
+        #   IpProtocol: tcp
+        #   FromPort: 9312
+        #   ToPort: 9312
       Tags:
         - Key: Project
           Value: !Ref AppName
@@ -137,8 +137,8 @@ Resources:
       SecurityGroupEgress:
         - CidrIp: 0.0.0.0/0
           IpProtocol: "-1"
-        - CidrIpv6: ::/0
-          IpProtocol: "-1"
+        # - CidrIpv6: ::/0
+        #   IpProtocol: "-1"
       Tags:
         - Key: Project
           Value: !Ref AppName
