--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -51,11 +51,11 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
-  IPv6VCPCidrBlock:
-    Type: "AWS::EC2::VPCCidrBlock"
-    Properties:
-      VpcId: !Ref VPC
-      AmazonProvidedIpv6CidrBlock: true
+  # IPv6VCPCidrBlock:
+  #   Type: "AWS::EC2::VPCCidrBlock"
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     AmazonProvidedIpv6CidrBlock: true
 
   # Internet gateways
   InternetGateway:
@@ -101,12 +101,12 @@ Resources:
       RouteTableId: !Ref RouteTable
       GatewayId: !Ref InternetGateway
       DestinationCidrBlock: 0.0.0.0/0
-  IPv6Route:
-    Type: "AWS::EC2::Route"
-    Properties:
-      DestinationIpv6CidrBlock: ::/0
-      GatewayId: !Ref InternetGateway
-      RouteTableId: !Ref RouteTable
+  # IPv6Route:
+  #   Type: "AWS::EC2::Route"
+  #   Properties:
+  #     DestinationIpv6CidrBlock: ::/0
+  #     GatewayId: !Ref InternetGateway
+  #     RouteTableId: !Ref RouteTable
 
   # VPC endpoints
   S3Endpoint:
@@ -127,10 +127,10 @@ Resources:
           IpProtocol: tcp
           FromPort: 443
           ToPort: 443
-        - CidrIpv6: ::/0
-          IpProtocol: tcp
-          FromPort: 443
-          ToPort: 443
+        # - CidrIpv6: ::/0
+        #   IpProtocol: tcp
+        #   FromPort: 443
+        #   ToPort: 443
       Tags:
         - Key: Project
           Value: platform.prx.org
@@ -166,10 +166,10 @@ Resources:
           IpProtocol: tcp
           FromPort: 443
           ToPort: 443
-        - CidrIpv6: ::/0
-          IpProtocol: tcp
-          FromPort: 443
-          ToPort: 443
+        # - CidrIpv6: ::/0
+        #   IpProtocol: tcp
+        #   FromPort: 443
+        #   ToPort: 443
       Tags:
         - Key: Project
           Value: Porter
@@ -225,13 +225,13 @@ Resources:
   # Public subnets
   Subnet1:
     Type: "AWS::EC2::Subnet"
-    DependsOn: IPv6VCPCidrBlock
+    # DependsOn: IPv6VCPCidrBlock
     UpdateReplacePolicy: Retain
     Properties:
       VpcId: !Ref VPC
       AvailabilityZone: !Join ["", [!Ref "AWS::Region", a]]
       CidrBlock: 10.0.1.0/24
-      Ipv6CidrBlock: !Select [0, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
+      # Ipv6CidrBlock: !Select [0, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
       Tags:
         - Key: Project
           Value: platform.prx.org
@@ -245,13 +245,13 @@ Resources:
           Value: !Ref AWS::StackId
   Subnet2:
     Type: "AWS::EC2::Subnet"
-    DependsOn: IPv6VCPCidrBlock
+    # DependsOn: IPv6VCPCidrBlock
     UpdateReplacePolicy: Retain
     Properties:
       VpcId: !Ref VPC
       AvailabilityZone: !If [IsUsEast1, us-east-1c, !Join ["", [!Ref "AWS::Region", b]]]
       CidrBlock: 10.0.2.0/24
-      Ipv6CidrBlock: !Select [1, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
+      # Ipv6CidrBlock: !Select [1, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
       Tags:
         - Key: Project
           Value: platform.prx.org
@@ -265,13 +265,13 @@ Resources:
           Value: !Ref AWS::StackId
   Subnet3:
     Type: "AWS::EC2::Subnet"
-    DependsOn: IPv6VCPCidrBlock
+    # DependsOn: IPv6VCPCidrBlock
     UpdateReplacePolicy: Retain
     Properties:
       VpcId: !Ref VPC
       AvailabilityZone: !If [IsUsEast1, us-east-1d, !Join ["", [!Ref "AWS::Region", c]]]
       CidrBlock: 10.0.3.0/24
-      Ipv6CidrBlock: !Select [2, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
+      # Ipv6CidrBlock: !Select [2, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
       Tags:
         - Key: Project
           Value: platform.prx.org
@@ -329,18 +329,18 @@ Resources:
       Protocol: 6 # TCP
       RuleAction : allow
       RuleNumber : 120
-  InboundIPv6HTTPSNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
-    Properties:
-      Egress: false
-      Ipv6CidrBlock: ::/0
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 443
-        To: 443
-      Protocol: 6 # TCP
-      RuleAction : allow
-      RuleNumber : 121
+  # InboundIPv6HTTPSNetworkAclEntry:
+  #   Type: "AWS::EC2::NetworkAclEntry"
+  #   Properties:
+  #     Egress: false
+  #     Ipv6CidrBlock: ::/0
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 443
+  #       To: 443
+  #     Protocol: 6 # TCP
+  #     RuleAction : allow
+  #     RuleNumber : 121
 
   InboundIPv4HTTPNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
@@ -354,18 +354,18 @@ Resources:
       Protocol: 6 # TCP
       RuleAction : allow
       RuleNumber : 130
-  InboundIPv6HTTPNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
-    Properties:
-      Egress: false
-      Ipv6CidrBlock: ::/0
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 80
-        To: 80
-      Protocol: 6 # TCP
-      RuleAction : allow
-      RuleNumber : 131
+  # InboundIPv6HTTPNetworkAclEntry:
+  #   Type: "AWS::EC2::NetworkAclEntry"
+  #   Properties:
+  #     Egress: false
+  #     Ipv6CidrBlock: ::/0
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 80
+  #       To: 80
+  #     Protocol: 6 # TCP
+  #     RuleAction : allow
+  #     RuleNumber : 131
 
   InboundIPv4UDPHTTPSNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
@@ -379,18 +379,18 @@ Resources:
       Protocol: 17 # UDP
       RuleAction : allow
       RuleNumber : 140
-  InboundIPv6UDPHTTPSNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
-    Properties:
-      Egress: false
-      Ipv6CidrBlock: ::/0
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 443
-        To: 443
-      Protocol: 17 # UDP
-      RuleAction : allow
-      RuleNumber : 141
+  # InboundIPv6UDPHTTPSNetworkAclEntry:
+  #   Type: "AWS::EC2::NetworkAclEntry"
+  #   Properties:
+  #     Egress: false
+  #     Ipv6CidrBlock: ::/0
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 443
+  #       To: 443
+  #     Protocol: 17 # UDP
+  #     RuleAction : allow
+  #     RuleNumber : 141
 
   InboundIPv4UDPHTTPNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
@@ -404,18 +404,18 @@ Resources:
       Protocol: 17 # UDP
       RuleAction : allow
       RuleNumber : 150
-  InboundIPv6UDPHTTPNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
-    Properties:
-      Egress: false
-      Ipv6CidrBlock: ::/0
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 80
-        To: 80
-      Protocol: 17 # UDP
-      RuleAction : allow
-      RuleNumber : 151
+  # InboundIPv6UDPHTTPNetworkAclEntry:
+  #   Type: "AWS::EC2::NetworkAclEntry"
+  #   Properties:
+  #     Egress: false
+  #     Ipv6CidrBlock: ::/0
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 80
+  #       To: 80
+  #     Protocol: 17 # UDP
+  #     RuleAction : allow
+  #     RuleNumber : 151
 
   InboundIPv4SSHNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
@@ -429,18 +429,18 @@ Resources:
       Protocol: 6 # TCP
       RuleAction : allow
       RuleNumber : 230
-  InboundIPv6SSHNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
-    Properties:
-      Egress: false
-      Ipv6CidrBlock: ::/0
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 22
-        To: 22
-      Protocol: 6 # TCP
-      RuleAction : allow
-      RuleNumber : 231
+  # InboundIPv6SSHNetworkAclEntry:
+  #   Type: "AWS::EC2::NetworkAclEntry"
+  #   Properties:
+  #     Egress: false
+  #     Ipv6CidrBlock: ::/0
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 22
+  #       To: 22
+  #     Protocol: 6 # TCP
+  #     RuleAction : allow
+  #     RuleNumber : 231
 
   InboundIPv4UDPSSHNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
@@ -454,18 +454,18 @@ Resources:
       Protocol: 17 # UDP
       RuleAction : allow
       RuleNumber : 240
-  InboundIPv6UDPSSHNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
-    Properties:
-      Egress: false
-      Ipv6CidrBlock: ::/0
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 22
-        To: 22
-      Protocol: 17 # UDP
-      RuleAction : allow
-      RuleNumber : 241
+  # InboundIPv6UDPSSHNetworkAclEntry:
+  #   Type: "AWS::EC2::NetworkAclEntry"
+  #   Properties:
+  #     Egress: false
+  #     Ipv6CidrBlock: ::/0
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 22
+  #       To: 22
+  #     Protocol: 17 # UDP
+  #     RuleAction : allow
+  #     RuleNumber : 241
 
   InboundIPv4NTPNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
@@ -479,18 +479,18 @@ Resources:
       Protocol: 17 # UDP
       RuleAction : allow
       RuleNumber : 250
-  InboundIPv6NTPNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
-    Properties:
-      Egress: false
-      Ipv6CidrBlock: ::/0
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 123
-        To: 123
-      Protocol: 17 # UDP
-      RuleAction : allow
-      RuleNumber : 251
+  # InboundIPv6NTPNetworkAclEntry:
+  #   Type: "AWS::EC2::NetworkAclEntry"
+  #   Properties:
+  #     Egress: false
+  #     Ipv6CidrBlock: ::/0
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 123
+  #       To: 123
+  #     Protocol: 17 # UDP
+  #     RuleAction : allow
+  #     RuleNumber : 251
 
   InboundIPv4ReturnTrafficNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
@@ -504,18 +504,18 @@ Resources:
       Protocol: 6 # TCP
       RuleAction : allow
       RuleNumber : 520
-  InboundIPv6ReturnTrafficNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
-    Properties:
-      Egress: false
-      Ipv6CidrBlock: ::/0
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 1024
-        To: 65535
-      Protocol: 6 # TCP
-      RuleAction : allow
-      RuleNumber : 521
+  # InboundIPv6ReturnTrafficNetworkAclEntry:
+  #   Type: "AWS::EC2::NetworkAclEntry"
+  #   Properties:
+  #     Egress: false
+  #     Ipv6CidrBlock: ::/0
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 1024
+  #       To: 65535
+  #     Protocol: 6 # TCP
+  #     RuleAction : allow
+  #     RuleNumber : 521
 
   InboundIPv4UDPReturnTrafficNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
@@ -529,18 +529,18 @@ Resources:
       Protocol: 17 # UDP
       RuleAction : allow
       RuleNumber : 530
-  InboundIPv6UDPReturnTrafficNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
-    Properties:
-      Egress: false
-      Ipv6CidrBlock: ::/0
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 1024
-        To: 65535
-      Protocol: 17 # UDP
-      RuleAction : allow
-      RuleNumber : 531
+  # InboundIPv6UDPReturnTrafficNetworkAclEntry:
+  #   Type: "AWS::EC2::NetworkAclEntry"
+  #   Properties:
+  #     Egress: false
+  #     Ipv6CidrBlock: ::/0
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 1024
+  #       To: 65535
+  #     Protocol: 17 # UDP
+  #     RuleAction : allow
+  #     RuleNumber : 531
 
   # ACL outbound rules
   OutboudIPv4TrafficNetworkAclEntry:
@@ -553,16 +553,16 @@ Resources:
       Protocol: -1 # All
       RuleAction : allow
       RuleNumber : 120
-  OutboudIPv6TrafficNetworkAclEntry:
-    # Allow allw outbound IPv6 traffic
-    Type: "AWS::EC2::NetworkAclEntry"
-    Properties:
-      Egress: true
-      Ipv6CidrBlock: ::/0
-      NetworkAclId: !Ref NetworkAcl
-      Protocol: -1 # All
-      RuleAction : allow
-      RuleNumber : 121
+  # OutboudIPv6TrafficNetworkAclEntry:
+  #   # Allow allw outbound IPv6 traffic
+  #   Type: "AWS::EC2::NetworkAclEntry"
+  #   Properties:
+  #     Egress: true
+  #     Ipv6CidrBlock: ::/0
+  #     NetworkAclId: !Ref NetworkAcl
+  #     Protocol: -1 # All
+  #     RuleAction : allow
+  #     RuleNumber : 121
 
   # Public subnet ACL associations
   Subnet1NetworkAclAssociation:
