--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -329,18 +329,18 @@ Resources:
       Protocol: 6 # TCP
       RuleAction : allow
       RuleNumber : 120
-  # InboundIPv6HTTPSNetworkAclEntry:
-  #   Type: "AWS::EC2::NetworkAclEntry"
-  #   Properties:
-  #     Egress: false
-  #     Ipv6CidrBlock: ::/0
-  #     NetworkAclId: !Ref NetworkAcl
-  #     PortRange:
-  #       From: 443
-  #       To: 443
-  #     Protocol: 6 # TCP
-  #     RuleAction : allow
-  #     RuleNumber : 121
+  InboundIPv6HTTPSNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 443
+        To: 443
+      Protocol: 6 # TCP
+      RuleAction : allow
+      RuleNumber : 121
 
   InboundIPv4HTTPNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
@@ -354,18 +354,18 @@ Resources:
       Protocol: 6 # TCP
       RuleAction : allow
       RuleNumber : 130
-  # InboundIPv6HTTPNetworkAclEntry:
-  #   Type: "AWS::EC2::NetworkAclEntry"
-  #   Properties:
-  #     Egress: false
-  #     Ipv6CidrBlock: ::/0
-  #     NetworkAclId: !Ref NetworkAcl
-  #     PortRange:
-  #       From: 80
-  #       To: 80
-  #     Protocol: 6 # TCP
-  #     RuleAction : allow
-  #     RuleNumber : 131
+  InboundIPv6HTTPNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 80
+        To: 80
+      Protocol: 6 # TCP
+      RuleAction : allow
+      RuleNumber : 131
 
   InboundIPv4UDPHTTPSNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
@@ -379,18 +379,18 @@ Resources:
       Protocol: 17 # UDP
       RuleAction : allow
       RuleNumber : 140
-  # InboundIPv6UDPHTTPSNetworkAclEntry:
-  #   Type: "AWS::EC2::NetworkAclEntry"
-  #   Properties:
-  #     Egress: false
-  #     Ipv6CidrBlock: ::/0
-  #     NetworkAclId: !Ref NetworkAcl
-  #     PortRange:
-  #       From: 443
-  #       To: 443
-  #     Protocol: 17 # UDP
-  #     RuleAction : allow
-  #     RuleNumber : 141
+  InboundIPv6UDPHTTPSNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 443
+        To: 443
+      Protocol: 17 # UDP
+      RuleAction : allow
+      RuleNumber : 141
 
   InboundIPv4UDPHTTPNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
@@ -404,18 +404,18 @@ Resources:
       Protocol: 17 # UDP
       RuleAction : allow
       RuleNumber : 150
-  # InboundIPv6UDPHTTPNetworkAclEntry:
-  #   Type: "AWS::EC2::NetworkAclEntry"
-  #   Properties:
-  #     Egress: false
-  #     Ipv6CidrBlock: ::/0
-  #     NetworkAclId: !Ref NetworkAcl
-  #     PortRange:
-  #       From: 80
-  #       To: 80
-  #     Protocol: 17 # UDP
-  #     RuleAction : allow
-  #     RuleNumber : 151
+  InboundIPv6UDPHTTPNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 80
+        To: 80
+      Protocol: 17 # UDP
+      RuleAction : allow
+      RuleNumber : 151
 
   InboundIPv4SSHNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
@@ -429,18 +429,18 @@ Resources:
       Protocol: 6 # TCP
       RuleAction : allow
       RuleNumber : 230
-  # InboundIPv6SSHNetworkAclEntry:
-  #   Type: "AWS::EC2::NetworkAclEntry"
-  #   Properties:
-  #     Egress: false
-  #     Ipv6CidrBlock: ::/0
-  #     NetworkAclId: !Ref NetworkAcl
-  #     PortRange:
-  #       From: 22
-  #       To: 22
-  #     Protocol: 6 # TCP
-  #     RuleAction : allow
-  #     RuleNumber : 231
+  InboundIPv6SSHNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 22
+        To: 22
+      Protocol: 6 # TCP
+      RuleAction : allow
+      RuleNumber : 231
 
   InboundIPv4UDPSSHNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
@@ -454,18 +454,18 @@ Resources:
       Protocol: 17 # UDP
       RuleAction : allow
       RuleNumber : 240
-  # InboundIPv6UDPSSHNetworkAclEntry:
-  #   Type: "AWS::EC2::NetworkAclEntry"
-  #   Properties:
-  #     Egress: false
-  #     Ipv6CidrBlock: ::/0
-  #     NetworkAclId: !Ref NetworkAcl
-  #     PortRange:
-  #       From: 22
-  #       To: 22
-  #     Protocol: 17 # UDP
-  #     RuleAction : allow
-  #     RuleNumber : 241
+  InboundIPv6UDPSSHNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 22
+        To: 22
+      Protocol: 17 # UDP
+      RuleAction : allow
+      RuleNumber : 241
 
   InboundIPv4NTPNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
@@ -479,18 +479,18 @@ Resources:
       Protocol: 17 # UDP
       RuleAction : allow
       RuleNumber : 250
-  # InboundIPv6NTPNetworkAclEntry:
-  #   Type: "AWS::EC2::NetworkAclEntry"
-  #   Properties:
-  #     Egress: false
-  #     Ipv6CidrBlock: ::/0
-  #     NetworkAclId: !Ref NetworkAcl
-  #     PortRange:
-  #       From: 123
-  #       To: 123
-  #     Protocol: 17 # UDP
-  #     RuleAction : allow
-  #     RuleNumber : 251
+  InboundIPv6NTPNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 123
+        To: 123
+      Protocol: 17 # UDP
+      RuleAction : allow
+      RuleNumber : 251
 
   InboundIPv4ReturnTrafficNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
@@ -504,18 +504,18 @@ Resources:
       Protocol: 6 # TCP
       RuleAction : allow
       RuleNumber : 520
-  # InboundIPv6ReturnTrafficNetworkAclEntry:
-  #   Type: "AWS::EC2::NetworkAclEntry"
-  #   Properties:
-  #     Egress: false
-  #     Ipv6CidrBlock: ::/0
-  #     NetworkAclId: !Ref NetworkAcl
-  #     PortRange:
-  #       From: 1024
-  #       To: 65535
-  #     Protocol: 6 # TCP
-  #     RuleAction : allow
-  #     RuleNumber : 521
+  InboundIPv6ReturnTrafficNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 1024
+        To: 65535
+      Protocol: 6 # TCP
+      RuleAction : allow
+      RuleNumber : 521
 
   InboundIPv4UDPReturnTrafficNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
@@ -529,18 +529,18 @@ Resources:
       Protocol: 17 # UDP
       RuleAction : allow
       RuleNumber : 530
-  # InboundIPv6UDPReturnTrafficNetworkAclEntry:
-  #   Type: "AWS::EC2::NetworkAclEntry"
-  #   Properties:
-  #     Egress: false
-  #     Ipv6CidrBlock: ::/0
-  #     NetworkAclId: !Ref NetworkAcl
-  #     PortRange:
-  #       From: 1024
-  #       To: 65535
-  #     Protocol: 17 # UDP
-  #     RuleAction : allow
-  #     RuleNumber : 531
+  InboundIPv6UDPReturnTrafficNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 1024
+        To: 65535
+      Protocol: 17 # UDP
+      RuleAction : allow
+      RuleNumber : 531
 
   # ACL outbound rules
   OutboudIPv4TrafficNetworkAclEntry:
@@ -553,16 +553,16 @@ Resources:
       Protocol: -1 # All
       RuleAction : allow
       RuleNumber : 120
-  # OutboudIPv6TrafficNetworkAclEntry:
-  #   # Allow allw outbound IPv6 traffic
-  #   Type: "AWS::EC2::NetworkAclEntry"
-  #   Properties:
-  #     Egress: true
-  #     Ipv6CidrBlock: ::/0
-  #     NetworkAclId: !Ref NetworkAcl
-  #     Protocol: -1 # All
-  #     RuleAction : allow
-  #     RuleNumber : 121
+  OutboudIPv6TrafficNetworkAclEntry:
+    # Allow allw outbound IPv6 traffic
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      Egress: true
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref NetworkAcl
+      Protocol: -1 # All
+      RuleAction : allow
+      RuleNumber : 121
 
   # Public subnet ACL associations
   Subnet1NetworkAclAssociation:
