Enable IPv6 SG rules for ECS

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -297,18 +297,18 @@ Resources:
           IpProtocol: tcp
           FromPort: 443
           ToPort: 443
-        # - CidrIpv6: ::/0
-        #   IpProtocol: tcp
-        #   FromPort: 443
-        #   ToPort: 443
+        - CidrIpv6: ::/0
+          IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
         - CidrIp: 0.0.0.0/0
           IpProtocol: tcp
           FromPort: 80
           ToPort: 80
-        # - CidrIpv6: ::/0
-        #   IpProtocol: tcp
-        #   FromPort: 80
-        #   ToPort: 80
+        - CidrIpv6: ::/0
+          IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
       Tags:
         - Key: Project
           Value: platform.prx.org
@@ -330,10 +330,10 @@ Resources:
           IpProtocol: tcp
           FromPort: 22
           ToPort: 22
-        # - CidrIpv6: ::/0
-        #   IpProtocol: tcp
-        #   FromPort: 22
-        #   ToPort: 22
+        - CidrIpv6: ::/0
+          IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
       Tags:
         - Key: Project
           Value: platform.prx.org
@@ -355,18 +355,18 @@ Resources:
           IpProtocol: udp
           FromPort: 123
           ToPort: 123
-        # - CidrIpv6: ::/0
-        #   IpProtocol: udp
-        #   FromPort: 123
-        #   ToPort: 123
+        - CidrIpv6: ::/0
+          IpProtocol: udp
+          FromPort: 123
+          ToPort: 123
         - CidrIp: 0.0.0.0/0
           IpProtocol: tcp
           FromPort: 1024
           ToPort: 65535
-        # - CidrIpv6: ::/0
-        #   IpProtocol: tcp
-        #   FromPort: 1024
-        #   ToPort: 65535
+        - CidrIpv6: ::/0
+          IpProtocol: tcp
+          FromPort: 1024
+          ToPort: 65535
       Tags:
         - Key: Project
           Value: platform.prx.org
@@ -386,8 +386,8 @@ Resources:
       SecurityGroupEgress:
         - CidrIp: 0.0.0.0/0
           IpProtocol: "-1"
-        # - CidrIpv6: ::/0
-        #   IpProtocol: "-1"
+        - CidrIpv6: ::/0
+          IpProtocol: "-1"
       Tags:
         - Key: Project
           Value: platform.prx.org
