Enable more IPv6 rules

--- a/db/elasticache-memcached.yml
+++ b/db/elasticache-memcached.yml
@@ -82,10 +82,10 @@ Resources:
           IpProtocol: "tcp"
           FromPort: 11211
           ToPort: 11211
-        # - CidrIpv6: ::/0
-        #   IpProtocol: "tcp"
-        #   FromPort: 11211
-        #   ToPort: 11211
+        - CidrIpv6: ::/0
+          IpProtocol: "tcp"
+          FromPort: 11211
+          ToPort: 11211
   ElasticacheCluster:
     Type: "AWS::ElastiCache::CacheCluster"
     Properties:
