--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -79,26 +79,26 @@ Resources:
           IpProtocol: tcp
           FromPort: 443
           ToPort: 443
-        # - CidrIpv6: ::/0
-        #   IpProtocol: tcp
-        #   FromPort: 443
-        #   ToPort: 443
+        - CidrIpv6: ::/0
+          IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
         - CidrIp: 0.0.0.0/0
           IpProtocol: tcp
           FromPort: 80
           ToPort: 80
-        # - CidrIpv6: ::/0
-        #   IpProtocol: tcp
-        #   FromPort: 80
-        #   ToPort: 80
+        - CidrIpv6: ::/0
+          IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
         - CidrIp: 0.0.0.0/0
           IpProtocol: tcp
           FromPort: 22
           ToPort: 22
-        # - CidrIpv6: ::/0
-        #   IpProtocol: tcp
-        #   FromPort: 22
-        #   ToPort: 22
+        - CidrIpv6: ::/0
+          IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
       Tags:
         - Key: Project
           Value: Dovetail
