Enable more IPv6 SG rules

--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -127,10 +127,10 @@ Resources:
           IpProtocol: tcp
           FromPort: 443
           ToPort: 443
-        # - CidrIpv6: ::/0
-        #   IpProtocol: tcp
-        #   FromPort: 443
-        #   ToPort: 443
+        - CidrIpv6: ::/0
+          IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
       Tags:
         - Key: Project
           Value: platform.prx.org
@@ -166,10 +166,10 @@ Resources:
           IpProtocol: tcp
           FromPort: 443
           ToPort: 443
-        # - CidrIpv6: ::/0
-        #   IpProtocol: tcp
-        #   FromPort: 443
-        #   ToPort: 443
+        - CidrIpv6: ::/0
+          IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
       Tags:
         - Key: Project
           Value: Porter
