Enable IPv6 CICR block

--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -51,11 +51,11 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
-  # IPv6VCPCidrBlock:
-  #   Type: "AWS::EC2::VPCCidrBlock"
-  #   Properties:
-  #     VpcId: !Ref VPC
-  #     AmazonProvidedIpv6CidrBlock: true
+  IPv6VCPCidrBlock:
+    Type: "AWS::EC2::VPCCidrBlock"
+    Properties:
+      VpcId: !Ref VPC
+      AmazonProvidedIpv6CidrBlock: true
 
   # Internet gateways
   InternetGateway:
