Enable IPv6 route

--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -101,12 +101,12 @@ Resources:
       RouteTableId: !Ref RouteTable
       GatewayId: !Ref InternetGateway
       DestinationCidrBlock: 0.0.0.0/0
-  # IPv6Route:
-  #   Type: "AWS::EC2::Route"
-  #   Properties:
-  #     DestinationIpv6CidrBlock: ::/0
-  #     GatewayId: !Ref InternetGateway
-  #     RouteTableId: !Ref RouteTable
+  IPv6Route:
+    Type: "AWS::EC2::Route"
+    Properties:
+      DestinationIpv6CidrBlock: ::/0
+      GatewayId: !Ref InternetGateway
+      RouteTableId: !Ref RouteTable
 
   # VPC endpoints
   S3Endpoint:
