Enable IPv6 CIDR blocks on subnets

--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -172,7 +172,7 @@ Resources:
           ToPort: 443
       Tags:
         - Key: Project
-          Value: Porter
+          Value: platform.prx.org
         - Key: Name
           Value: !Sub ${AWS::StackName}-EcsEndpointsSecurityGroup
         - Key: prx:cloudformation:stack-name
@@ -225,13 +225,13 @@ Resources:
   # Public subnets
   Subnet1:
     Type: "AWS::EC2::Subnet"
-    # DependsOn: IPv6VCPCidrBlock
+    DependsOn: IPv6VCPCidrBlock
     UpdateReplacePolicy: Retain
     Properties:
       VpcId: !Ref VPC
       AvailabilityZone: !Join ["", [!Ref "AWS::Region", a]]
       CidrBlock: 10.0.1.0/24
-      # Ipv6CidrBlock: !Select [0, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
+      Ipv6CidrBlock: !Select [0, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
       Tags:
         - Key: Project
           Value: platform.prx.org
@@ -245,13 +245,13 @@ Resources:
           Value: !Ref AWS::StackId
   Subnet2:
     Type: "AWS::EC2::Subnet"
-    # DependsOn: IPv6VCPCidrBlock
+    DependsOn: IPv6VCPCidrBlock
     UpdateReplacePolicy: Retain
     Properties:
       VpcId: !Ref VPC
       AvailabilityZone: !If [IsUsEast1, us-east-1c, !Join ["", [!Ref "AWS::Region", b]]]
       CidrBlock: 10.0.2.0/24
-      # Ipv6CidrBlock: !Select [1, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
+      Ipv6CidrBlock: !Select [1, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
       Tags:
         - Key: Project
           Value: platform.prx.org
@@ -265,13 +265,13 @@ Resources:
           Value: !Ref AWS::StackId
   Subnet3:
     Type: "AWS::EC2::Subnet"
-    # DependsOn: IPv6VCPCidrBlock
+    DependsOn: IPv6VCPCidrBlock
     UpdateReplacePolicy: Retain
     Properties:
       VpcId: !Ref VPC
       AvailabilityZone: !If [IsUsEast1, us-east-1d, !Join ["", [!Ref "AWS::Region", c]]]
       CidrBlock: 10.0.3.0/24
-      # Ipv6CidrBlock: !Select [2, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
+      Ipv6CidrBlock: !Select [2, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
       Tags:
         - Key: Project
           Value: platform.prx.org
