Use dualstack IP address type for platform ALB

--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -93,7 +93,7 @@ Resources:
     DependsOn:
       - PlatformALBLogsBucketPolicy
     Properties:
-      # IpAddressType: dualstack
+      IpAddressType: dualstack
       LoadBalancerAttributes:
         # https://docs.aws.amazon.com/elasticloadbalancing/latest/application/application-load-balancers.html#load-balancer-attributes
         - Key: idle_timeout.timeout_seconds
