--- a/stacks/web-alb-application.yml
+++ b/stacks/web-alb-application.yml
@@ -121,7 +121,7 @@ Resources:
   ALB:
     Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
     Properties:
-      # IpAddressType: dualstack
+      IpAddressType: dualstack
       Scheme: internet-facing
       SecurityGroups:
         - !Ref ALBSecurityGroup
