Add some missing AAAA prx.tech DNS records

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -214,6 +214,11 @@ Resources:
           AliasTarget:
             DNSName: !Sub dualstack.${DovetailALB.DNSName}
             HostedZoneId: !GetAtt DovetailALB.CanonicalHostedZoneID
+        - Type: AAAA
+          Name: !Sub dovetail.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
+          AliasTarget:
+            DNSName: !Sub dualstack.${DovetailALB.DNSName}
+            HostedZoneId: !GetAtt DovetailALB.CanonicalHostedZoneID
   DovetailRouterRecordSetGroup:
     Type: "AWS::Route53::RecordSetGroup"
     DependsOn: DovetailALB
@@ -222,6 +227,11 @@ Resources:
       HostedZoneName: prx.tech.
       RecordSets:
         - Type: A
+          Name: !Sub dovetail-router.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
+          AliasTarget:
+            DNSName: !Sub dualstack.${DovetailALB.DNSName}
+            HostedZoneId: !GetAtt DovetailALB.CanonicalHostedZoneID
+        - Type: AAAA
           Name: !Sub dovetail-router.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
           AliasTarget:
             DNSName: !Sub dualstack.${DovetailALB.DNSName}
