--- a/stacks/web-alb-application.yml
+++ b/stacks/web-alb-application.yml
@@ -347,6 +347,11 @@ Resources:
           AliasTarget:
             DNSName: !Sub dualstack.${ALB.DNSName}
             HostedZoneId: !GetAtt ALB.CanonicalHostedZoneID
+        - Type: AAAA
+          Name: !Sub ${AppName}.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
+          AliasTarget:
+            DNSName: !Sub dualstack.${ALB.DNSName}
+            HostedZoneId: !GetAtt ALB.CanonicalHostedZoneID
   # ECS Service - Worker
   WorkerLogGroup:
     Condition: CreateWorkerResources
