Improve header forwarding description

--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -195,7 +195,9 @@ Parameters:
       (optional) The Headers, if any, that you want CloudFront to forward to
       the origin (whitelisted headers). For the headers that you specify,
       CloudFront also caches separate versions of a specified object that is
-      based on the header values in viewer requests.
+      based on the header values in viewer requests. Provide a
+      comma-delimited list (e.g. "Origin,Access-Control-Request-Headers,
+      Access-Control-Request-Method")
   CloudFrontMinTtl:
     Type: String
     Description: >-
