--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -192,7 +192,7 @@ Parameters:
   CloudFrontForwardedHeaders:
     Type: CommaDelimitedList
     Description: >-
-      (optional) The Headers, if any, that you want CloudFront to forward to
+      (optional) The headers, if any, that you want CloudFront to forward to
       the origin (whitelisted headers). For the headers that you specify,
       CloudFront also caches separate versions of a specified object that is
       based on the header values in viewer requests. Provide a
