Add forwarded headers parameter metadata

--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -73,6 +73,7 @@ Metadata:
           - CloudFrontDefaultTtl
           - CloudFrontMinTtl
           - CloudFrontMaxTtl
+          - CloudFrontForwardedHeaders
           - CloudFrontLoggingBucket
           - CloudFrontLoggingBucketPrefix
           - CloudFrontOriginAccess
@@ -105,6 +106,8 @@ Metadata:
         default: Min TTL
       CloudFrontMaxTtl:
         default: Max TTL
+      CloudFrontForwardedHeaders:
+        default: Forwarded headers
       CloudFrontPriceClass:
         default: Price class
       CloudFrontDefaultRootObject:
