Add Step Function policy to CI role

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -165,6 +165,16 @@ Resources:
                   - ecr:PutImage
                 Resource:
                   - !Sub arn:aws:ecr:us-east-1:${AWS::AccountId}:repository/*
+        - PolicyName: PorterPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "states:StartExecution"
+                  - "states:DescribeExecution"
+                Resource:
+                  - "*" # TODO
       ManagedPolicyArns:
         - Fn::ImportValue:
             !Sub ${InfrastructureSecretsStackName}-SecretsInstanceAccessPolicyArn
