Lock fargate platform version; bump memory

--- a/stacks/container-apps/augury-forecast.yml
+++ b/stacks/container-apps/augury-forecast.yml
@@ -113,7 +113,7 @@ Resources:
           Name: augury-forecast
       Cpu: '4096'
       ExecutionRoleArn: !GetAtt AuguryForecastExecutionRole.Arn
-      Memory: '8192'
+      Memory: '16384'
       NetworkMode: awsvpc
       RequiresCompatibilities:
         - FARGATE
@@ -216,6 +216,7 @@ Resources:
               assignPublicIp: 'ENABLED',
             },
           },
+          platformVersion: '1.4.0',
           taskDefinition: process.env.ECS_TASK_DEFINITION,
         };
 
