Add Squarespace verification record

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -1612,6 +1612,11 @@ Resources:
             - verify.squarespace.com.
           TTL: "300"
           Type: CNAME
+          Name: !Sub h4g4kwd8yd3nhbxj4a5z.${Domain}
+        - ResourceRecords:
+            - verify.squarespace.com.
+          TTL: "300"
+          Type: CNAME
           Name: !Sub tydshd7bc7mddya37xk3.${Domain}
         - ResourceRecords:
             - ext-cust.squarespace.com.
