Add some metrics (TODO: alarms)

--- a/stacks/serverless/dovetail-counts-lambda.yml
+++ b/stacks/serverless/dovetail-counts-lambda.yml
@@ -147,6 +147,24 @@ Resources:
         - MetricName: !Sub "dovetail_counts_errors_${EnvironmentTypeAbbreviation}"
           MetricNamespace: LogMetrics
           MetricValue: "1"
+  DovetailCountsMissingArrangementMetric:
+    Type: "AWS::Logs::MetricFilter"
+    Properties:
+      FilterPattern: '{ $.errorName = "ArrangementNotFoundError" }'
+      LogGroupName: !Sub "/aws/lambda/${DovetailCountsLambdaFunction}"
+      MetricTransformations:
+        - MetricName: !Sub "dovetail_counts_missing_arrangement_${EnvironmentTypeAbbreviation}"
+          MetricNamespace: LogMetrics
+          MetricValue: "1"
+  DovetailCountsKinesisFailureMetric:
+    Type: "AWS::Logs::MetricFilter"
+    Properties:
+      FilterPattern: '{ $.errorName = "KinesisPutError" }'
+      LogGroupName: !Sub "/aws/lambda/${DovetailCountsLambdaFunction}"
+      MetricTransformations:
+        - MetricName: !Sub "dovetail_counts_kinesis_failure_${EnvironmentTypeAbbreviation}"
+          MetricNamespace: LogMetrics
+          MetricValue: "$.count"
   # alarms
   DovetailCountsLoggedErrorAlarm:
     Type: "AWS::CloudWatch::Alarm"
