--- a/stacks/serverless/dovetail-counts-lambda.yml
+++ b/stacks/serverless/dovetail-counts-lambda.yml
@@ -172,11 +172,11 @@ Resources:
       ActionsEnabled: true
       AlarmName: !Sub "[Dovetail][Counts][ArrangementsMissing] ${EnvironmentType}"
       AlarmActions:
-        - OpsErrorMessagesSnsTopicArn
+        - !Ref OpsErrorMessagesSnsTopicArn
       InsufficientDataActions:
-        - OpsErrorMessagesSnsTopicArn
+        - !Ref OpsErrorMessagesSnsTopicArn
       OKActions:
-        - OpsErrorMessagesSnsTopicArn
+        - !Ref OpsErrorMessagesSnsTopicArn
       AlarmDescription: Arrangement JSON not found in S3, for some reason? Crazy!
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
@@ -192,11 +192,11 @@ Resources:
       ActionsEnabled: true
       AlarmName: !Sub "[Dovetail][Counts][KinesisFailures] ${EnvironmentType}"
       AlarmActions:
-        - OpsErrorMessagesSnsTopicArn
+        - !Ref OpsErrorMessagesSnsTopicArn
       InsufficientDataActions:
-        - OpsErrorMessagesSnsTopicArn
+        - !Ref OpsErrorMessagesSnsTopicArn
       OKActions:
-        - OpsErrorMessagesSnsTopicArn
+        - !Ref OpsErrorMessagesSnsTopicArn
       AlarmDescription: Kinesis PUTs failing and getting retried on the dovetail counts lambda
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 5
