Remove Solr references

--- a/etc/simple-ec2.yml
+++ b/etc/simple-ec2.yml
@@ -28,7 +28,7 @@ Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
   CreateAlarms: !Not [!Equals [!Ref AlarmSnsTopic, ""]]
 Resources:
-  SolrInstance:
+  Ec2Instance:
     Type: AWS::EC2::Instance
     Properties:
       InstanceType: t2.medium
@@ -52,8 +52,8 @@ Resources:
     Type: AWS::EC2::SecurityGroup
     DeletionPolicy: Retain
     Properties:
-      GroupName: !Sub ${UniqueName}${EnvironmentType}Solr
-      GroupDescription: !Sub ${UniqueName} ${EnvironmentType} Solr Security Group
+      GroupName: !Sub ${UniqueName}${EnvironmentType}
+      GroupDescription: !Sub ${UniqueName} ${EnvironmentType} Security Group
       SecurityGroupIngress:
         - CidrIp: 0.0.0.0/0
           IpProtocol: tcp
@@ -69,7 +69,7 @@ Resources:
           ToPort: 8983
       Tags:
         - Key: Name
-          Value: !Sub ${UniqueName}${EnvironmentType}Solr
+          Value: !Sub ${UniqueName}${EnvironmentType}
         # - Key: Project
         #   Value: !Ref ProjectName
         - Key: Environment
