Use correct image ID parameter type

--- a/etc/simple-ec2.yml
+++ b/etc/simple-ec2.yml
@@ -16,7 +16,7 @@ Parameters:
     Type: String
     Description: VPC stack to launch the instance into
   ImageId:
-    Type: String
+    Type: AWS::EC2::Image::Id
   AlarmSnsTopic:
     Type: String
     Description: Optional topic arn for CloudWatch alarms
