Improve parameter description

--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -264,9 +264,9 @@ Parameters:
     Description: >-
       Create an origin access identity which can be used to grant the CloudFront
       distribution access to an S3 bucket via a bucket policy. Only use this
-      when the origin is an S3 bucket. The Comment is required when an origin
-      access identity is created. Turning this on will not update an S3 bucket
-      policies.
+      when the origin is an S3 bucket. Turning this on will not update any S3
+      bucket policies, but such a policy is required to allow the origin access
+      identity to function properly.
     Default: 'No'
     AllowedValues:
       - 'Yes'
