Parameterize EC2 instance type

--- a/etc/simple-ec2.yml
+++ b/etc/simple-ec2.yml
@@ -24,6 +24,14 @@ Parameters:
     Type: String
     Description: Unique name for associated resources (CamelCase; should not include env name)
     AllowedPattern: ^[a-zA-Z][a-zA-Z0-9\-]*$
+  InstanceType:
+    Type: String
+    AllowedValues:
+      - t3.nano
+      - t3.micro
+      - t3.small
+      - t3.medium
+      - t3.large
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
   CreateAlarms: !Not [!Equals [!Ref AlarmSnsTopic, ""]]
@@ -31,7 +39,7 @@ Resources:
   Ec2Instance:
     Type: AWS::EC2::Instance
     Properties:
-      InstanceType: t2.medium
+      InstanceType: !Ref InstanceType
       ImageId: !Ref ImageId
       KeyName: !Ref KeyPairName
       SecurityGroupIds:
