Route underscore path prefix to dovetail-router

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -166,6 +166,18 @@ Resources:
             - dovetail-router.*
       ListenerArn: !Ref DovetailALBHTTPListener
       Priority: 21
+  DovetailRouterPathALBHTTPListenerRule:
+    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
+    Properties:
+      Actions:
+        - TargetGroupArn: !Ref DovetailRouterALBTargetGroup
+          Type: forward
+      Conditions:
+        - Field: path-pattern
+          Values:
+            - /_/*
+      ListenerArn: !Ref DovetailALBHTTPListener
+      Priority: 5
   DovetailALBHTTPSListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
@@ -201,6 +213,18 @@ Resources:
             - dovetail-router.*
       ListenerArn: !Ref DovetailALBHTTPSListener
       Priority: 21
+  DovetailRouterPathALBHTTPSListenerRule:
+    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
+    Properties:
+      Actions:
+        - TargetGroupArn: !Ref DovetailRouterALBTargetGroup
+          Type: forward
+      Conditions:
+        - Field: path-pattern
+          Values:
+            - /_/*
+      ListenerArn: !Ref DovetailALBHTTPSListener
+      Priority: 5
   # Domain
   DovetailWebRecordSetGroup:
     Type: "AWS::Route53::RecordSetGroup"
