Add Project tags

--- a/db/solr-ec2.yml
+++ b/db/solr-ec2.yml
@@ -50,8 +50,8 @@ Resources:
         Fn::ImportValue:
           !Sub ${VPCStackName}-Subnet1
       Tags:
-        # - Key: Project
-        #   Value: !Ref ProjectName
+        - Key: Project
+          Value: Solr
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: "prx:cloudformation:stack-name"
@@ -66,8 +66,8 @@ Resources:
       AvailabilityZone: !GetAtt Ec2Instance.AvailabilityZone
       Size: !Ref DataVolumeSize
       Tags:
-        # - Key: Project
-        #   Value: !Ref ProjectName
+        - Key: Project
+          Value: Solr
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: "prx:cloudformation:stack-name"
