Permissions to call out to Porter

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -847,6 +847,7 @@ Resources:
           Fn::ImportValue:
             !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
         CodeS3ObjectVersion: !Ref DovetailStitchLambdaCodeS3ObjectVersion
+        PorterSnsArn: !Join ["", ["/prx/", !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation], "/dovetail-stitch-lambda/PORTER_SNS_ARN"]]
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
