--- a/stacks/dovetail-stitch-lambda.yml
+++ b/stacks/dovetail-stitch-lambda.yml
@@ -16,6 +16,8 @@ Parameters:
     Type: String
   EnvironmentTypeAbbreviation:
     Type: String
+  PorterSnsArn:
+    Type: AWS::SSM::Parameter::Value<String>
 Mappings:
   EnvironmentTypeMap:
     Testing:
@@ -84,6 +86,15 @@ Resources:
                   - "s3:PutObjectTagging"
                 Resource:
                   - !Join ["", ["arn:aws:s3:::", !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, Bucket], "/", !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, Folder], "/*"]]
+        - PolicyName: DovetailStitchPorterSnsPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "sns:Publish"
+                Resource:
+                  - !Ref PorterSnsArn
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
         - "arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess"
