Parameterize web container command

--- a/stacks/container-apps/web-application.yml
+++ b/stacks/container-apps/web-application.yml
@@ -87,6 +87,9 @@ Parameters:
   ContainerCpu:
     Type: String
     Default: 128
+  WebContainerCommand:
+    Type: String
+    Default: web
   HealthCheckPath:
     Type: String
     Default: /api/v1
@@ -257,7 +260,7 @@ Resources:
             - HostPort: 0
               ContainerPort: !Ref ContainerPort
           Command:
-            - web
+            - !Ref WebContainerCommand
       Tags:
         - Key: Project
           Value: !Ref AppName
