Update Iframely container command

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -691,6 +691,7 @@ Resources:
         ContainerMemory: !Ref ContainerMemory
         ContainerMemoryReservation: !Ref ContainerMemoryReservation
         ContainerCpu: !Ref ContainerCpu
+        WebContainerCommand: cluster.js
         PlatformALBListenerPriorityPrefix: !Ref IframelyPlatformALBListenerPriorityPrefix
         EcrImageTag: !Ref IframelyEcrImageTag
         ExplicitHostHeader: embed.pri.org
