--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -699,7 +699,7 @@ Resources:
         AppName: "iframely"
         CreateWorker: "false"
         ContainerPort: "8061"
-        HealthCheckPath: "/"
+        HealthCheckPath: "/s/css/bootstrap.css"
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
