Add pri.org wildcard to cert

--- a/stacks/certificate.yml
+++ b/stacks/certificate.yml
@@ -24,6 +24,7 @@ Resources:
         - "*.prx.tech"
         - "*.staging.prx.tech"
         - "*.prx.mx"
+        - "*.pri.org"
         - !Sub "*.cdn.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech"
       Tags:
         - Key: Project
