Add Step Functions permissions to Dovetail pipeline

--- a/etc/dovetail-edge-deploy.yml
+++ b/etc/dovetail-edge-deploy.yml
@@ -560,6 +560,16 @@ Resources:
                   - ssm:GetParameters
                 Resource:
                   - "*" # TODO
+        - PolicyName: PorterPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "states:StartExecution"
+                  - "states:DescribeExecution"
+                Resource:
+                  - "*" # TODO
       Tags:
         - Key: Project
           Value: Infrastructure
