--- a/stacks/serverless/analytics-ingest-lambdas.yml
+++ b/stacks/serverless/analytics-ingest-lambdas.yml
@@ -43,6 +43,8 @@ Parameters:
     Type: AWS::SSM::Parameter::Value<String>
   RedisHost:
     Type: AWS::SSM::Parameter::Value<String>
+  RedisImpressionsHost:
+    Type: AWS::SSM::Parameter::Value<String>
 Resources:
   # Shared IAM Role
   AnalyticsLambdaExecutionIAMRole:
@@ -197,6 +199,8 @@ Resources:
         Variables:
           REDIS_HOST: !Ref RedisHost
           REDIS_TTL: "7200"
+          REDIS_IMPRESSIONS_HOST: !Ref RedisImpressionsHost
+          REDIS_IMPRESSIONS_TTL: "90000"
       Handler: index.handler
       MemorySize: 256
       Role: !GetAtt AnalyticsLambdaExecutionIAMRole.Arn
