--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -108,3 +108,11 @@ Resources:
         # Snap Judgment
         - { Type: A,    Name: !Sub "pf5449snpj.${Domain}", AliasTarget: { DNSName: "d3j244ouutc6g5.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf5449snpj.${Domain}", AliasTarget: { DNSName: "d3j244ouutc6g5.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # That's Totally Normal
+        - { Type: A,    Name: !Sub "pf8122norm.${Domain}", AliasTarget: { DNSName: "dmns5h8j85xy1.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf8122norm.${Domain}", AliasTarget: { DNSName: "dmns5h8j85xy1.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # Snap Judgment
+        - { Type: A,    Name: !Sub "pf8123ggen.${Domain}", AliasTarget: { DNSName: "d1e307ubuh77wi.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf8123ggen.${Domain}", AliasTarget: { DNSName: "d1e307ubuh77wi.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
