Set up a metric and alarm for augury

--- a/stacks/container-apps/web-application.yml
+++ b/stacks/container-apps/web-application.yml
@@ -316,6 +316,8 @@ Resources:
     Type: "AWS::Logs::LogGroup"
     Properties:
       RetentionInDays: 14
+    Export:
+      Name: !Sub ${AppName}-${EnvironmentType}-WorkerLogGroup
   WorkerTaskDefinition:
     Condition: CreateWorkerResources
     Type: "AWS::ECS::TaskDefinition"
