--- a/stacks/container-apps/web-application.yml
+++ b/stacks/container-apps/web-application.yml
@@ -383,6 +383,9 @@ Outputs:
   WorkerServiceName:
     Description: Name of the worker service
     Value: !If [CreateWorkerResources, !GetAtt WorkerService.Name, ""]
+  WorkerLogGroupName:
+    Description: Name of the worker log group
+    Value: !If [CreateWorkerResources, !Ref WorkerLogGroup, ""]
   HostedZoneDNSName:
     Description: Convenience domain name for the ALB in a hosted zone
     Value: !Sub |
