Try using a parameter and stack attribute

--- a/stacks/container-apps/augury-alarms.yml
+++ b/stacks/container-apps/augury-alarms.yml
@@ -12,13 +12,14 @@ Parameters:
     Type: String
   EnvironmentTypeAbbreviation:
     Type: String
+  AuguryWorkerLogGroupName:
+    Type: String
 Resources:
   AuguryActualsIngestJobInvocationMetric:
     Type: "AWS::Logs::MetricFilter"
     Properties:
       FilterPattern: '[ImpressionsFetchJob] Success'
-      LogGroupName:
-        Fn::ImportValue: !Sub "AuguryStack-${EnvironmentType}-WorkerLogGroup"
+      LogGroupName: !Ref AuguryWorkerLogGroupName
       MetricTransformations:
         - MetricName: !Sub "augury_actuals_rollups_ct_${EnvironmentTypeAbbreviation}"
           MetricNamespace: LogMetrics
