--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -382,6 +382,7 @@ Resources:
             !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        AuguryWorkerLogGroupName: !GetAtt AuguryStack.WorkerLogGroup
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
