If the sum of invocations is less than

--- a/stacks/container-apps/augury-alarms.yml
+++ b/stacks/container-apps/augury-alarms.yml
@@ -36,7 +36,7 @@ Resources:
       OKActions:
         - !Ref OpsErrorMessagesSnsTopicArn
       AlarmDescription: Augury actuals are behind
-      ComparisonOperator: GreaterThanThreshold
+      ComparisonOperator: LessThanThreshold
       EvaluationPeriods: 3
       MetricName: AuguryActualsIngestJobInvocationMetric
       Namespace: AWS/ECS
