Use a PRX/Augury namespace

--- a/stacks/container-apps/augury-alarms.yml
+++ b/stacks/container-apps/augury-alarms.yml
@@ -22,7 +22,7 @@ Resources:
       LogGroupName: !Ref AuguryWorkerLogGroupName
       MetricTransformations:
         - MetricName: !Sub "augury_actuals_rollups_ct_${EnvironmentTypeAbbreviation}"
-          MetricNamespace: LogMetrics
+          MetricNamespace: PRX/Augury
           MetricValue: "1"
   AuguryActualsAreBehindAlarm:
     Type: "AWS::CloudWatch::Alarm"
