Getatt refers to the output in substack

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -382,7 +382,7 @@ Resources:
             !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
-        AuguryWorkerLogGroupName: !GetAtt AuguryStack.WorkerLogGroup
+        AuguryWorkerLogGroupName: !GetAtt AuguryStack.WorkerLogGroupName
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
