Switch to healthcheck path

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -786,7 +786,7 @@ Resources:
         ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
         ContainerMemoryReservation: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemoryReservation]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
-        HealthCheckPath: "/api/v1/certs"
+        HealthCheckPath: "/healthcheck"
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
