Add ForwardedHeaders metadata to single origin template

--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -70,6 +70,7 @@ Metadata:
           - CloudFrontViewerCertificateMinimumProtocolVersion
           - CloudFrontCachedMethods
           - CloudFrontAllowedMethods
+          - CloudFrontForwardedHeaders
           - CloudFrontCompress
           - CloudFrontDefaultTtl
           - CloudFrontMinTtl
@@ -114,6 +115,8 @@ Metadata:
         default: Allowed methods
       CloudFrontCachedMethods:
         default: Cached methods
+      CloudFrontForwardedHeaders:
+        default: Forwarded Headers
       CloudFrontCompress:
         default: Compress objects automatically
       CloudFrontOriginAccess:
