--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -116,3 +116,7 @@ Resources:
         # Snap Judgment
         - { Type: A,    Name: !Sub "pf8123ggen.${Domain}", AliasTarget: { DNSName: "d1e307ubuh77wi.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf8123ggen.${Domain}", AliasTarget: { DNSName: "d1e307ubuh77wi.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # Latino USA
+        - { Type: A,    Name: !Sub "pf0732lusa.${Domain}", AliasTarget: { DNSName: "d3isv1ihstdgc8.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf0732lusa.${Domain}", AliasTarget: { DNSName: "d3isv1ihstdgc8.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
