--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -130,6 +130,24 @@ Resources:
         - FixedResponseConfig:
             StatusCode: "404"
           Type: fixed-response
+  PlatformALBHTTPUpgradeRedirectListenerRule:
+    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
+    Properties:
+      Actions:
+        - RedirectConfig:
+            Host: '#{host}'
+            Path: '#{path}'
+            Port: '#{port}'
+            Protocol: HTTPS
+            Query: '#{query}'
+            StatusCode: HTTP_301
+          Type: redirect
+      Conditions:
+        - Field: path-pattern
+          Values:
+            - '*'
+      ListenerArn: !Ref PlatformALBHTTPListener
+      Priority: 1
   PlatformALBHTTPSListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
